--- a/views/merch.ejs
+++ b/views/merch.ejs
@@ -54,13 +54,35 @@
                                             <img src="./media/<%= merch[0].merchImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
                                         </div>
                                         <div class="col col-5">
-                                            <br><br><br><br><br>
                                             <h5>
                                                 <%= merch[0].merchName %>
                                             </h5>
                                             <p>PHP
                                                 <%= merch[0].price %>
                                             </p>
+                                            <form action="/review_process" method="POST" id="reviewForm">
+
+                                                <div class="mb-3">
+                                                    <label for="rating" class="form-label">Your Rating</label>
+                                                    <select id="rating" name="rating" class="form-select" style="border-color: #752329;">
+                                                        <option value="1">☕ Bean There, Done That (Poor)</option>
+                                                        <option value="2">☕☕ A Latte Room for Improvement (Fair)</option>
+                                                        <option value="3">☕☕☕ Just Brew-tiful (Satisfactory)</option>
+                                                        <option value="4">☕☕☕☕ Brew-tifully Good (Very Good)</option>
+                                                        <option value="5">☕☕☕☕☕ Espresso-tastic (Excellent)</option>
+                                                    </select>
+                                                </div>
+
+                                                <div class="mb-3">
+                                                    <label for="review" class="form-label">Your Review
+                                                        <span id="current">0</span>
+                                                        <span id="maximum">/ 300</span>
+                                                    </label>
+                                                    <textarea id="review" name="message" rows="4" cols="50" maxlength="300" required class="form-control" placeholder="Write your review..." style="border-color: #752329;"></textarea>
+                                                </div>
+
+                                                <button type="submit" class="btn btn-dark submit-btn" style="margin: 0 auto; display: block; background-color: #752329;">Submit Review</button>
+                                            </form>
 
                                         </div>
                                     </div>
@@ -97,13 +119,35 @@
                                             <img src="./media/<%= merch[2].merchImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
                                         </div>
                                         <div class="col col-5">
-                                            <br><br><br><br><br>
                                             <h5>
                                                 <%= merch[2].merchName %>
                                             </h5>
                                             <p>PHP
                                                 <%= merch[2].price %>
                                             </p>
+                                            <form action="/review_process" method="POST" id="reviewForm">
+
+                                                <div class="mb-3">
+                                                    <label for="rating" class="form-label">Your Rating</label>
+                                                    <select id="rating" name="rating" class="form-select" style="border-color: #752329;">
+                                                        <option value="1">☕ Bean There, Done That (Poor)</option>
+                                                        <option value="2">☕☕ A Latte Room for Improvement (Fair)</option>
+                                                        <option value="3">☕☕☕ Just Brew-tiful (Satisfactory)</option>
+                                                        <option value="4">☕☕☕☕ Brew-tifully Good (Very Good)</option>
+                                                        <option value="5">☕☕☕☕☕ Espresso-tastic (Excellent)</option>
+                                                    </select>
+                                                </div>
+
+                                                <div class="mb-3">
+                                                    <label for="review" class="form-label">Your Review
+                                                        <span id="current">0</span>
+                                                        <span id="maximum">/ 300</span>
+                                                    </label>
+                                                    <textarea id="review" name="message" rows="4" cols="50" maxlength="300" required class="form-control" placeholder="Write your review..." style="border-color: #752329;"></textarea>
+                                                </div>
+
+                                                <button type="submit" class="btn btn-dark submit-btn" style="margin: 0 auto; display: block; background-color: #752329;">Submit Review</button>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
@@ -139,13 +183,35 @@
                                             <img src="./media/<%= merch[1].merchImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
                                         </div>
                                         <div class="col col-5">
-                                            <br><br><br><br><br>
                                             <h5>
                                                 <%= merch[1].merchName %>
                                             </h5>
                                             <p>PHP
                                                 <%= merch[1].price %>
                                             </p>
+                                            <form action="/review_process" method="POST" id="reviewForm">
+
+                                                <div class="mb-3">
+                                                    <label for="rating" class="form-label">Your Rating</label>
+                                                    <select id="rating" name="rating" class="form-select" style="border-color: #752329;">
+                                                        <option value="1">☕ Bean There, Done That (Poor)</option>
+                                                        <option value="2">☕☕ A Latte Room for Improvement (Fair)</option>
+                                                        <option value="3">☕☕☕ Just Brew-tiful (Satisfactory)</option>
+                                                        <option value="4">☕☕☕☕ Brew-tifully Good (Very Good)</option>
+                                                        <option value="5">☕☕☕☕☕ Espresso-tastic (Excellent)</option>
+                                                    </select>
+                                                </div>
+
+                                                <div class="mb-3">
+                                                    <label for="review" class="form-label">Your Review
+                                                        <span id="current">0</span>
+                                                        <span id="maximum">/ 300</span>
+                                                    </label>
+                                                    <textarea id="review" name="message" rows="4" cols="50" maxlength="300" required class="form-control" placeholder="Write your review..." style="border-color: #752329;"></textarea>
+                                                </div>
+
+                                                <button type="submit" class="btn btn-dark submit-btn" style="margin: 0 auto; display: block; background-color: #752329;">Submit Review</button>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
