--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -112,9 +112,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <% } %>
-                                        <% } %>
-                                            <% }) %>
+                                <% } %>
+                            <% } %>
+                        <% }) %>
                     </div>
 
                     <br>
@@ -189,9 +189,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <% } %>
-                                        <% } %>
-                                            <% }) %>
+                                <% } %>
+                            <% } %>
+                        <% }) %>
                     </div>
 
                     <br><br><br>
@@ -268,9 +268,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <% } %>
-                                        <% } %>
-                                            <% }) %>
+                                <% } %>
+                            <% } %>
+                        <% }) %>
                     </div>
 
                     <br>
@@ -316,28 +316,29 @@
                                                             <p class="card-text">Description:
                                                                 <%= menuDocument.Sandwiches[i].description %>
                                                             </p>
+                                                            
                                                             <form action="/review_process" method="POST" id="reviewForm"></form>
 
-                                                            <div class="mb-3">
-                                                                <label for="rating" class="form-label">Your Rating</label>
-                                                                <select id="rating" name="rating" class="form-select" style="border-color: #752329;">
-                                                                        <option value="1">☕ Bean There, Done That (Poor)</option>
-                                                                        <option value="2">☕☕ A Latte Room for Improvement (Fair)</option>
-                                                                        <option value="3">☕☕☕ Just Brew-tiful (Satisfactory)</option>
-                                                                        <option value="4">☕☕☕☕ Brew-tifully Good (Very Good)</option>
-                                                                        <option value="5">☕☕☕☕☕ Espresso-tastic (Excellent)</option>
-                                                                    </select>
-                                                            </div>
+                                                                <div class="mb-3">
+                                                                    <label for="rating" class="form-label">Your Rating</label>
+                                                                    <select id="rating" name="rating" class="form-select" style="border-color: #752329;">
+                                                                            <option value="1">☕ Bean There, Done That (Poor)</option>
+                                                                            <option value="2">☕☕ A Latte Room for Improvement (Fair)</option>
+                                                                            <option value="3">☕☕☕ Just Brew-tiful (Satisfactory)</option>
+                                                                            <option value="4">☕☕☕☕ Brew-tifully Good (Very Good)</option>
+                                                                            <option value="5">☕☕☕☕☕ Espresso-tastic (Excellent)</option>
+                                                                        </select>
+                                                                </div>
 
-                                                            <div class="mb-3">
-                                                                <label for="review" class="form-label">Your Review
-                                                                        <span id="current">0</span>
-                                                                        <span id="maximum">/ 300</span>
-                                                                    </label>
-                                                                <textarea id="review" name="message" rows="4" cols="50" maxlength="300" required class="form-control" placeholder="Write your review..." style="border-color: #752329;"></textarea>
-                                                            </div>
+                                                                <div class="mb-3">
+                                                                    <label for="review" class="form-label">Your Review
+                                                                            <span id="current">0</span>
+                                                                            <span id="maximum">/ 300</span>
+                                                                        </label>
+                                                                    <textarea id="review" name="message" rows="4" cols="50" maxlength="300" required class="form-control" placeholder="Write your review..." style="border-color: #752329;"></textarea>
+                                                                </div>
 
-                                                            <button type="submit" class="btn btn-dark submit-btn" style="margin: 0 auto; display: block; background-color: #752329;">Submit Review</button>
+                                                                <button type="submit" class="btn btn-dark submit-btn" style="margin: 0 auto; display: block; background-color: #752329;">Submit Review</button>
                                                             </form>
                                                         </div>
                                                     </div>
@@ -345,9 +346,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <% } %>
-                                        <% } %>
-                                            <% }) %>
+                                <% } %>
+                            <% } %>
+                        <% }) %>
                     </div>
 
                 </div>
@@ -394,6 +395,30 @@
                                                         <p class="card-text">Description:
                                                             <%= menu[i].description %>
                                                         </p>
+
+                                                        <form action="/review_process" method="POST" id="reviewForm"></form>
+
+                                                            <div class="mb-3">
+                                                                <label for="rating" class="form-label">Your Rating</label>
+                                                                <select id="rating" name="rating" class="form-select" style="border-color: #752329;">
+                                                                        <option value="1">☕ Bean There, Done That (Poor)</option>
+                                                                        <option value="2">☕☕ A Latte Room for Improvement (Fair)</option>
+                                                                        <option value="3">☕☕☕ Just Brew-tiful (Satisfactory)</option>
+                                                                        <option value="4">☕☕☕☕ Brew-tifully Good (Very Good)</option>
+                                                                        <option value="5">☕☕☕☕☕ Espresso-tastic (Excellent)</option>
+                                                                    </select>
+                                                            </div>
+
+                                                            <div class="mb-3">
+                                                                <label for="review" class="form-label">Your Review
+                                                                        <span id="current">0</span>
+                                                                        <span id="maximum">/ 300</span>
+                                                                    </label>
+                                                                <textarea id="review" name="message" rows="4" cols="50" maxlength="300" required class="form-control" placeholder="Write your review..." style="border-color: #752329;"></textarea>
+                                                            </div>
+
+                                                            <button type="submit" class="btn btn-dark submit-btn" style="margin: 0 auto; display: block; background-color: #752329;">Submit Review</button>
+                                                        </form>
                                                     </div>
                                                 </div>
                                             </div>
@@ -416,6 +441,13 @@
                 document.getElementById('home').removeAttribute("class", 'active');
                 document.getElementById('home').setAttribute("class", "nav-link")
                 document.getElementById('products').setAttribute("class", 'nav-link dropdown-toggle active');
+
+                const submitButtons = document.getElementsByClassName("submit-btn");
+                for (let i = 0; i < submitButtons.length; i++) {
+                    submitButtons[i].addEventListener('click', () => {
+                        alert("FEATURE NOT AVAILABLE YET SIR HEHE. PLEASE REFER TO REVIEW PAGE");
+                    })
+                }
             </script>
 </body>
 
